# harumiya

./: .gitignore  Cargo.toml  README.md
harumiya-frontend/: package-lock.json  package.json  sampleWorld.json
harumiya-frontend/app/: sessions.ts
harumiya-frontend/app/components/: detailedPrompt.tsx  section.tsx
harumiya-frontend/app/routes/: _index.tsx  detail.tsx  world.tsx  world_overview.tsx
src/: create_world.rs  create_world_controller.rs  embedder.rs  gemini_embedder.rs  hello.rs  lib.rs  main.rs  prompts.toml
src/vector_db/: contents.rs  errors.rs  finder.rs  gemini.rs  mod.rs  vector.rs
