[package]
name = "harumiya"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
async-stream = "0.3.5"
axum = "0.7.5"
dotenv = "0.15.0"
futures = "0.3.30"
gcp_auth = "0.11.0"
lopdf = "0.32.0"
qdrant-client = "1.9.0"
reqwest = { version = "0.12.3", features = ["json"] }
serde = "1.0.197"
serde_json = "1.0.116"
shuttle-axum = "0.44.0"
shuttle-runtime = "0.44.0"
tokio = { version = "1.37.0", features = ["full", "rt-multi-thread"] }
toml = "0.8.12"
tonic = "0.11.0"
